tests/ui/rfcs/rfc-2008-non-exhaustive/uninhabited/match_with_exhaustive_patterns.stderr
error[E0004]: non-exhaustive patterns: type `UninhabitedEnum` is non-empty
  --> $DIR/match_with_exhaustive_patterns.rs:17:11
   |
LL |     match x {}
   |           ^
   |
note: `UninhabitedEnum` defined here
  --> $DIR/auxiliary/uninhabited.rs:5:1
   |
LL | pub enum UninhabitedEnum {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `UninhabitedEnum`, which is marked as non-exhaustive
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
